--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "0.0.1",
   "description": "HuntJS RESTfull API for mongoosejs models",
   "main": "index.js",
+  "engines": {
+    "node": ">=0.10.26",
+    "npm": ">=1.4.3"
+  },
+  "os" : [ "linux" ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,12 +16,24 @@
     "url": "git@bitbucket.org:oselot/hrw.git"
   },
   "keywords": [
-    "Huntjs",
+    "huntjs",
     "rest",
     "restfull",
     "mongoose",
-    "api"
+    "api",
+    "resource",
+    "crud"
   ],
-  "author": "Anatolij Nowal",
-  "license": "MIT"
+  "author": {
+    "name": "Anatolij Ostroumov",
+    "url": "https://github.com/vodolaz095",
+    "email": "ostroumov095@gmail.com"
+  },
+  "license": "MIT",
+  "devDependencies":{
+    "hunt":">=0.1.3",
+    "mocha": ">=1.20.0",
+    "should": "3.x",
+    "request":"latest"
+  }
 }
