--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
     "node": ">=0.10.26",
     "npm": ">=1.4.3"
   },
-  "os" : [ "linux" ],
+  "os": [ "linux", "darwin" ],
   "scripts": {
-    "start":"node example/index.js",
+    "start": "node example/index.js",
     "test": "./node_modules/.bin/mocha --reporter spec"
   },
   "repository": {
     "type": "git",
-    "url": "git@bitbucket.org:oselot/hrw.git"
+    "url": "git@github.com:oselot/hunt-mongoose-rest.git"
   },
   "keywords": [
     "huntjs",
@@ -30,11 +30,14 @@
     "url": "https://github.com/vodolaz095",
     "email": "ostroumov095@gmail.com"
   },
+  "contributors": [
+    "Anatoliy Zasalvskiy <adz@nycitt.com> (https://github.com/nycitt)"
+  ],
   "license": "MIT",
-  "devDependencies":{
-    "hunt":">=0.1.3",
+  "devDependencies": {
+    "hunt": ">=0.1.3",
     "mocha": ">=1.20.0",
     "should": "3.x",
-    "request":"latest"
+    "request": "latest"
   }
 }
